Fixed flickering when a new game is started, added a hover effect to table data, some more cleanup

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ h1 {
   padding: 16px;
 }
 
+h2 {
+  display: none;
+}
+
 #dialogConfirm {
   display: none;
   /* display: block; */
@@ -56,7 +60,6 @@ h1 {
 
 #scoreInfo {
   display: none;
-  font-family: 'Oleo Script Swash Caps', cursive;
   font-size: 24px;
   word-spacing: 24px;
 }
@@ -77,10 +80,6 @@ td {
   width: 200px;
   height: 200px;
   cursor: pointer;
-}
-
-td:hover {
-  background-color: #fc8ea4;
 }
 
 table tr:first-child td {
@@ -119,7 +118,7 @@ button:hover:enabled {
 }
 
 button.gameModeBtn {
-  display: block;
+  display: none;
   width: 600px;
   height: 150px;
   font-size: 48px;
